--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "inquirer": "^8.2.4",
     "mysql2": "^2.3.3"
   }
 }
